--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html5>
-<html>
+<html lang="en">
 <head>
 	<title>BensonProject</title>
+	<!-- 最新編譯和最佳化的 CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+	<!-- 選擇性佈景主題 -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+	<!-- bootstrap.js相依於 jQuery，必須先引用jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+	<!-- 最新編譯和最佳化的 JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<header id="header">
 		<!-- include pageHeader.html -->
 	</header>
 	<a href="eat/eat.html">今天吃什麼</a>
+	<br>
+	<br>
+	<a href="chance/index.html">求籤</a>
 	<footer id="footer">
 		<!-- include pageFooter.html -->
 	</footer>
