--- a/chance/index.html
+++ b/chance/index.html
@@ -2,78 +2,82 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>百首靈籤求籤網</title>
-	<!-- 最新編譯和最佳化的 CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
-	<!-- 選擇性佈景主題 -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+	<title>恩主公百首籤詩</title>
+	<script src="js/chancelist.js"></script>
+	 <!-- Bootstrap core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- bootstrap.js相依於 jQuery，必須先引用jQuery -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../css/assets/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-	<!-- 最新編譯和最佳化的 JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../js/assets/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-	<header id="header">
-		<div id="title">百首靈籤求籤網</div>
-		<!-- include pageHeader.html -->
-	</header>
-	<div id="number"></div>
-	<div>號籤</div>
-	<button id="yes" onclick="saveChance()">是</button>
-	<button id="no" onclick="cleanChance()">否</button>
-	<br>
-	<button id="start" onclick="getChance()">求籤</button>
-	<button id="end" onclick="finish()" style="display:none">結束</button>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">恩主公百首籤詩</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">首頁</a></li>
+            <li><a href="choose_chance.html">求籤網</a></li>
+            <li><a href="#no1">1~10</a></li>
+	        <li><a href="#no11">11~20</a></li>
+	        <li><a href="#no21">21~30</a></li>
+	        <li><a href="#no31">31~40</a></li>
+	        <li><a href="#no41">41~50</a></li>
+	        <li><a href="#no51">51~60</a></li>
+	        <li><a href="#no61">61~70</a></li>
+	        <li><a href="#no71">71~80</a></li>
+	        <li><a href="#no81">81~90</a></li>
+	        <li><a href="#no91">91~100</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>	
+	<div class="container">
+	  <div class="starter-template">
+	        <h1>恩主公百首籤詩</h1>
+	        
+	        <div id="chance"></div>
+	      </div>
+	</div>
 
-	<div id="namelist"></div>
-	
-	<div id="answer"></div>
-	<footer id="footer">
-		<!-- include pageFooter.html -->
-	</footer>
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../js/jquery-1.11.3.min.js"><\/script>')</script>
+    <script src="../js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../js/assets/ie10-viewport-bug-workaround.js"></script>
 
 	<script>
-	var	chanceList = new Array();
-	var	tempList = new Array();
-	var no = 0;
 	function init(){
-
-	}
-	function getChance(){
-		no = Math.floor((Math.random() * 100) + 1);
-		if(tempList.indexOf(no) > 0){
-			getChance();
-			return;
-		} else {
-			$('#number').text(no);
-			tempList.push(no);
-		}
-	}
-
-	function saveChance(){
-		if(chanceList.indexOf(no) == -1 && no != 0){
-			chanceList.push(no);
-		}
-		console.log(chanceList);
-		$('#end').show();
-	}
-
-	function cleanChance(){
-		$('#number').text('');
-	}
-
-	function finish(){
-		$('#number').text('');
-		$('#namelist').append('<button onclick="">小剉</button>');
 		for(var i = 0; i < chanceList.length; i++){
-			$('#answer').append(chanceList[i] + "<br>");
+			$('#chance').append('<p class="lead" id="no'+ (i+1) +'" >' + chanceList[i] + '</p>');
 		}
-		$('#end').hide();
 	}
+	init();
 	</script>
 </body>
 </html>
