--- a/chance/index.html
+++ b/chance/index.html
@@ -40,16 +40,16 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">首頁</a></li>
             <li><a href="choose_chance.html">求籤網</a></li>
-            <li><a href="#no1">1~10</a></li>
-	        <li><a href="#no11">11~20</a></li>
-	        <li><a href="#no21">21~30</a></li>
-	        <li><a href="#no31">31~40</a></li>
-	        <li><a href="#no41">41~50</a></li>
-	        <li><a href="#no51">51~60</a></li>
-	        <li><a href="#no61">61~70</a></li>
-	        <li><a href="#no71">71~80</a></li>
-	        <li><a href="#no81">81~90</a></li>
-	        <li><a href="#no91">91~100</a></li>
+            <!-- <li><a href="#no1">1~10</a></li>
+            	        <li><a href="#no11">11~20</a></li>
+            	        <li><a href="#no21">21~30</a></li>
+            	        <li><a href="#no31">31~40</a></li>
+            	        <li><a href="#no41">41~50</a></li>
+            	        <li><a href="#no51">51~60</a></li>
+            	        <li><a href="#no61">61~70</a></li>
+            	        <li><a href="#no71">71~80</a></li>
+            	        <li><a href="#no81">81~90</a></li>
+            	        <li><a href="#no91">91~100</a></li> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
