--- a/chance/index.html
+++ b/chance/index.html
@@ -34,22 +34,30 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
+        　<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand" href="#">恩主公百首籤詩</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">首頁</a></li>
             <li><a href="choose_chance.html">求籤網</a></li>
-            <!-- <li><a href="#no1">1~10</a></li>
-            	        <li><a href="#no11">11~20</a></li>
-            	        <li><a href="#no21">21~30</a></li>
-            	        <li><a href="#no31">31~40</a></li>
-            	        <li><a href="#no41">41~50</a></li>
-            	        <li><a href="#no51">51~60</a></li>
-            	        <li><a href="#no61">61~70</a></li>
-            	        <li><a href="#no71">71~80</a></li>
-            	        <li><a href="#no81">81~90</a></li>
-            	        <li><a href="#no91">91~100</a></li> -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#no1"　class="active">1~10首</a></li>
+	        <li><a href="#no11">11~20首</a></li>
+	        <li><a href="#no21">21~30首</a></li>
+	        <li><a href="#no31">31~40首</a></li>
+	        <li><a href="#no41">41~50首</a></li>
+	        <li><a href="#no51">51~60首</a></li>
+	        <li><a href="#no61">61~70首</a></li>
+	        <li><a href="#no71">71~80首</a></li>
+	        <li><a href="#no81">81~90首</a></li>
+	        <li><a href="#no91">91~100首</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
