--- a/chance/index.html
+++ b/chance/index.html
@@ -65,7 +65,6 @@
 	<div class="container">
 	  <div class="starter-template">
 	        <h1>恩主公百首籤詩</h1>
-	        
 	        <div id="chance"></div>
 	      </div>
 	</div>
@@ -73,18 +72,24 @@
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../js/jquery-1.11.3.min.js"><\/script>')</script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+    <script src="../js/jquery-1.11.3.min.js"></script>
+    <!-- <script>window.jQuery || document.write('<script src="../js/jquery-1.11.3.min.js"><\/script>')</script> -->
     <script src="../js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../js/assets/ie10-viewport-bug-workaround.js"></script>
 
 	<script>
+	//控制nav點擊縮放
+	$("ul.nav.navbar-nav.navbar-right li a").click(function(){
+		$(".navbar-collapse.collapse").removeClass("in");
+	});
 	function init(){
 		for(var i = 0; i < chanceList.length; i++){
 			$('#chance').append('<p class="lead" id="no'+ (i+1) +'" >' + chanceList[i] + '</p>');
 		}
 	}
+	
 	init();
 	</script>
 </body>
