--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -41,11 +41,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">恩主公百首籤詩</a>
+          <a class="navbar-brand" href="index.html">恩主公百首籤詩</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">首頁</a></li>
+            <li class="active"><a href="index.html">首頁</a></li>
             <li><a href="choose_chance.html">求籤網</a></li>
           </ul>
         </div><!--/.nav-collapse -->
