--- a/chance/index.html
+++ b/chance/index.html
@@ -44,7 +44,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">首頁</a></li>
+            <li class="active"><a href="index.html">首頁</a></li>
             <li><a href="choose_chance.html">求籤網</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
