--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -64,10 +64,10 @@
 		    
 			<div class="row">
 				<br>
-		    	<br>
 				<div class="col-xs-2"></div>
-				<div class="col-xs-3"><button id="start" type="button" class="btn btn-lg btn-primary" onclick="getChance()">求籤</button></div>
-				<div class="col-xs-3"><button id="end"type="button" class="btn btn-lg btn-warning" onclick="finish()" style="display:none">結束</button></div>
+				<div class="col-xs-2"><button id="add" type="button" class="btn btn-lg btn-primary" onclick="add()">新增信徒</button></div>
+				<div class="col-xs-2"><button id="start" type="button" class="btn btn-lg btn-primary" onclick="getChance()">求籤</button></div>
+				<div class="col-xs-2"><button id="end"type="button" class="btn btn-lg btn-warning" onclick="finish()" style="display:none">結束</button></div>
 				<div class="col-xs-2"><button id="clean"type="button" class="btn btn-lg btn-danger" onclick="clean()" style="display:none">清空</button></div>
 				<div class="col-xs-2"></div>
 			</div>
@@ -112,6 +112,7 @@
 
 		if(isFinish){
 			clean();
+			isFinish = false;
 		}
 
 		no = Math.floor((Math.random() * 100) + 1);
@@ -173,6 +174,10 @@
 		chooseList.clear();
 		tempList.clear();
 		$('#clean').hide();
+	}
+
+	function add(){
+		
 	}
 	</script>
 </body>
