--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -65,14 +65,20 @@
 			<div class="row">
 				<br>
 				<div class="col-xs-2"></div>
-				<div class="col-xs-2"><button id="add" type="button" class="btn btn-lg btn-primary" onclick="add()">新增信徒</button></div>
+				<div class="col-xs-2"><button id="add" type="button" class="btn btn-lg btn-success" onclick="add()">新增信徒</button></div>
 				<div class="col-xs-2"><button id="start" type="button" class="btn btn-lg btn-primary" onclick="getChance()">求籤</button></div>
-				<div class="col-xs-2"><button id="end"type="button" class="btn btn-lg btn-warning" onclick="finish()" style="display:none">結束</button></div>
-				<div class="col-xs-2"><button id="clean"type="button" class="btn btn-lg btn-danger" onclick="clean()" style="display:none">清空</button></div>
+				<div class="col-xs-2"><button id="end"type="button" class="btn btn-lg btn-danger" onclick="finish()" style="display:none">結束</button></div>
+				<div class="col-xs-2"><button id="clean"type="button" class="btn btn-lg btn-warning" onclick="clean()" style="display:none">清空</button></div>
 				<div class="col-xs-2"></div>
 			</div>
 
-			<div id="namelist"></div>
+			<br>
+			<br>
+			<ul class="nav nav-pills" id="namelist" role="tablist">
+		        <li role="presentation" class="active"><a href="#">Home</a></li>
+		        <li role="presentation"><a href="#">Profile</a></li>
+		        <li role="presentation"><a href="#">Messages</a></li>
+		    </ul>
 			
 			<div id="answer"></div>
 	   	</div>
@@ -142,7 +148,7 @@
 
 	function finish(){
 		$('#number').text('');
-		$('#namelist').append('<h1><span class="label label-default">信徒</span></h1>');
+		$('#namelist').append('<li role="presentation" class="active"><a href="#">信徒1</a></li>');
 		for(var i = 0; i < chooseList.length; i++){
 			$('#answer').append('<p class="lead" >' + chanceList[chooseList[i]-1] + '</p>');
 			console.log(i);
@@ -177,7 +183,7 @@
 	}
 
 	function add(){
-		
+
 	}
 	</script>
 </body>
