--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -67,7 +67,7 @@
 				<div class="col-xs-2"></div>
 				<div class="col-xs-2"><button id="add" type="button" class="btn btn-lg btn-success" onclick="add()">新增信徒</button></div>
 				<div class="col-xs-2"><button id="start" type="button" class="btn btn-lg btn-primary" onclick="getChance()">求籤</button></div>
-				<div class="col-xs-2"><button id="end"type="button" class="btn btn-lg btn-danger" onclick="finish()" style="display:none">結束</button></div>
+				<div class="col-xs-2"><button id="end"type="button" class="btn btn-lg btn-danger" onclick="finish()" style="display:none">看籤詩</button></div>
 				<div class="col-xs-2"><button id="clean"type="button" class="btn btn-lg btn-warning" onclick="clean()" style="display:none">清空</button></div>
 				<div class="col-xs-2"></div>
 			</div>
