--- a/chance/rite.html
+++ b/chance/rite.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="恩主公,百首,籤詩,百首籤詩,恩主公籤詩">
+    <meta name="description" content="恩主公,百首,籤詩,百首籤詩,恩主公籤詩,禮節,拜拜禮節">
     <meta name="author" content="Benson">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
 
@@ -34,7 +34,7 @@
 	<header id="header">
         <!-- pageHeader.html -->
     </header>
-
+	
 	<div class="container">
 	  	<div class="starter-template">
 	        <h1>恩主公百首籤詩</h1>
@@ -42,9 +42,10 @@
 	    </div>
 	</div>
 
-    <footer id="footer">
+	<footer id="footer">
         <!-- pageFooter.html -->
     </footer>
+
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -54,7 +55,7 @@
     <script src="../js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../js/assets/ie10-viewport-bug-workaround.js"></script>
-    <script src="js/global.js"></script>
+	<script src="js/global.js"></script>
 
 	<script>
   var $body = (window.opera) ? (document.compatMode == "CSS1Compat" ? $('html') : $('body')) : $('html,body');
