--- a/azuroRepublic/pageHeader.html
+++ b/azuroRepublic/pageHeader.html
@@ -11,10 +11,10 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">首頁</a></li>
-        <li><a href="chance/choose_chance.html">求籤網</a></li>
-        <li><a href="eat/eat.html">今天吃什麼</a></li>
-        <li><a href="azuroRepublic/index.html">AzuroRepublic</a></li>
+        <li class="active"><a href="../index.html">首頁</a></li>
+        <li><a href="../chance/choose_chance.html">求籤網</a></li>
+        <li><a href="../eat/eat.html">今天吃什麼</a></li>
+        <li><a href="../azuroRepublic/index.html">AzuroRepublic</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
