--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -11,7 +11,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">首頁</a></li>
+        <li class="active"><a href="../index.html">首頁</a></li>
         <li><a href="choose_chance.html">求籤網</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">百首籤詩 <span class="caret"></span></a>
