--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -14,7 +14,7 @@
         <li class="active"><a href="#">首頁</a></li>
         <li><a href="choose_chance.html">求籤網</a></li>
         <li class="dropdown">
-          <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" onclick="clickMenu(this)">百首籤詩 <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" onclick="clickMenu(this)">百首籤詩 <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#" id="#no1"　class="active">1~10首</a></li>
             <li><a href="#" id="#no11">11~20首</a></li>
