--- a/azuroRepublic/index.html
+++ b/azuroRepublic/index.html
@@ -214,7 +214,7 @@
         
         function sendTeleMsg(){
             $.ajax({
-                url: 'https://api.telegram.org/bot' + telToken + '/sendMessage?chat_id=-161423892&text=%E7%B3%99%E4%BD%A0%E9%A6%AC%E4%BD%8E',
+                url: 'https://api.telegram.org/bot' + telToken + '/sendMessage?chat_id=-161423892&text=Fuck',
                 dataType: 'jsonp',
                 type: 'GET',
                 data: {access_token: token},
