--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -28,6 +28,7 @@
             <li><a href="#" id="#no91">91~100首</a></li>
           </ul>
         </li><!--/.dropdown -->
+        <li><a href="kitchen.html">灶王真經</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
