--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -28,7 +28,21 @@
             <li><a href="#" id="#no91">91~100首</a></li>
           </ul>
         </li><!--/.dropdown -->
-        <li><a href="kitchen.html">灶王真經</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">經文 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="bookKaiJingZhou.html" class="active">開經咒</a></li>
+            <li><a href="bookMingSheng.html">明聖經</a></li>
+            <li><a href="bookDaDong.html">大洞經</a></li>
+            <li><a href="bookZaoWang.html">灶王經</a></li>
+            <li><a href="bookBeiDou.html">北斗經</a></li>
+            <li><a href="bookSanGuan.html">三官經</a></li>
+            <li><a href="bookXingHua.html">醒化經</a></li>
+            <li><a href="bookChengHuang.html">城隍經</a></li>
+            <li><a href="bookHuaTuo.html">華佗經</a></li>
+            <li><a href="bookShengYu.html">聖諭</a></li>
+          </ul>
+        </li><!--/.dropdown -->
       </ul>
     </div><!--/.nav-collapse -->
   </div>
